@@ -1,3 +1,5 @@
+* Dialer (ECCP): extend campaignlog request to request the last N records 
+  instead of all of the log entries for a given date range.
 * FIXED: Campaigns In, Campaigns Out, Agents, Callback Extensions, ECCP Users:
   modernize pagination to fix zeros under elastixneo theme.
 * FIXED: Callback Extensions: remove access to variable that no longer exists
